# OCR-KK

./: .env.example  .gitignore  PROJECT_SUMMARY.md  README.md  pyproject.toml  requirements.txt  setup.sh
.github/: copilot-instructions.md
configs/: config.yaml
docker/: Dockerfile  Dockerfile.uv  docker-compose.yml  prometheus.yml
docs/: API.md  PIPELINE_DOCUMENTATION.md  QUICKSTART.md
src/: __init__.py
src/api/: __init__.py  batch_endpoints.py  endpoints.py  main.py  middleware.py  models.py
src/modules/: __init__.py  batch_processor.py  detector.py  enhancer.py  enhancer_pretrained.py  extractor.py  pipeline_modes.py
src/schemas/: kk_output.json
src/training/: __init__.py  train_unet.py
src/utils/: __init__.py  config.py  excel_export.py  logger.py  metrics.py  validators.py
static/: app.js  index.html  styles.css
tests/: __init__.py  conftest.py  test_api.py  test_detector.py  test_enhancer_debug.py  test_pipeline_debug.py  test_pretrained_enhancer.py  test_vlm_debug.py  test_yolo_debug.py
